Fin de la section 10

--- a/KidsClub.API/Properties/launchSettings.json
+++ b/KidsClub.API/Properties/launchSettings.json
@@ -12,18 +12,18 @@
         "IIS Express": {
             "commandName": "IISExpress",
             "launchBrowser": true,
-            "launchUrl": "weatherforecast",
+            "launchUrl": "api/values",
             "environmentVariables": {
                 "ASPNETCORE_ENVIRONMENT": "Development"
             }
         },
         "KidsClub.API": {
             "commandName": "Project",
-            "launchBrowser": true,
-            "launchUrl": "weatherforecast",
+            "launchBrowser": false,
+            "launchUrl": "api/values",
             "applicationUrl": "http://localhost:5000",
             "environmentVariables": {
-                "ASPNETCORE_ENVIRONMENT": "Production"
+                "ASPNETCORE_ENVIRONMENT": "Development"
             }
         }
     }
